# smart-chlebak

./: .gitignore  Cargo.toml  LICENSE.md  README.md
firmware/: Cargo.toml
firmware/src/: main.rs
firmware/src/devices/: mod.rs
firmware/src/devices/bh1750/: config.rs  driver.rs  mod.rs  registers.rs
firmware/src/devices/bmp280/: config.rs  driver.rs  mod.rs  registers.rs  status.rs
firmware/src/devices/common/: error.rs
hardware_abstraction/: Cargo.toml
hardware_abstraction/src/: lib.rs
