[package]
name = "firmware"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-rp = { version = "0.4.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }
embedded-hal-async = { version = "1.0.0", features = ["defmt-03"] }
embedded-hal = { version = "1.0.0", features = ["defmt-03"] }

defmt = "1.0.1"
defmt-rtt = "1.0.0"
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

hardware-abstraction = { path = "../hardware_abstraction" }


